1.add middleware . 2.add dev、production error resError.js response 3.node.js uncaughtException、unhandledRejection
