# app.js
@@ -7,11 +7,11 @@ const cookieParser = require("cookie-parser"); // Cookie 解析
 require("./utils/conn.js");
 const swaggerUi = require("swagger-ui-express");
 const swaggerFile = require("./swagger_output.json"); // 剛剛輸出的 JSON
-
-var indexRouter = require("./routes/index");
-var usersRouter = require("./routes/users");
-var postsRouter = require("./routes/posts");
-var app = express();
+const indexRouter = require("./routes/index");
+const usersRouter = require("./routes/users");
+const postsRouter = require("./routes/posts");
+const { resErrorProd, resErrorDev } = require("./service/resError");
+const app = express();
 
 //同步的程式出錯，程式出現重大錯誤時
 process.on("uncaughtException", (err) => {
@@ -29,7 +29,7 @@ app.use(cookieParser());
 //靜態資源路徑設定
 app.use(express.static(path.join(__dirname, "public")));
 app.use("/", indexRouter);
-app.use("/users", usersRouter);
+app.use(usersRouter);
 app.use("/posts", postsRouter);
 app.use("/api-doc", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
@@ -37,31 +37,6 @@ app.use("/api-doc", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 app.use(function (req, res, next) {
   next(createError(404)); // 呼叫 next 把控制權轉移到下一個 middleware
 });
-
-// 自己設定的 err 錯誤
-const resErrorProd = (err, res) => {
-  if (err.isOperational) {
-    res.status(err.statusCode).json({
-      message: err.message,
-    });
-  } else {
-    // log 紀錄
-    console.error("出現重大錯誤", err);
-    // 送出罐頭預設訊息
-    res.status(500).json({
-      status: "error",
-      message: "系統錯誤，請恰系統管理員",
-    });
-  }
-};
-// 開發環境錯誤
-const resErrorDev = (err, res) => {
-  res.status(err.statusCode).json({
-    message: err.message,
-    error: err,
-    stack: err.stack,
-  });
-};
 
 //錯誤處理的 middleware 相較一般 middleware 會多一個 err 引數
 app.use(function (err, req, res, next) {
@@ -73,7 +48,7 @@ app.use(function (err, req, res, next) {
   if (err.name === "CastError") {
     err.message = "無此 id 資料，請確認後重新輸入！";
     err.isOperational = true;
-    return resErrorDev(err, res);
+    return resErrorProd(err, res);
   }
   // production
   if (err.name === "ValidationError") {
@@ -81,7 +56,6 @@ app.use(function (err, req, res, next) {
     err.isOperational = true;
     return resErrorProd(err, res);
   }
-
   resErrorProd(err, res);
 });
 
